<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PhoneActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ucyclebase4" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="32dp"
        android:src="@drawable/ucyclelogosign" />

    <TextView
        android:id="@+id/textContact1"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="center"
        android:text="@string/st_con1"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp"
        android:layout_below="@id/imageView"/>

    <TextView
        android:id="@+id/textContact2"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/textContact1"
        android:gravity="center"
        android:text="@string/st_con2"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textContact3"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/textContact2"
        android:gravity="center"
        android:text="@string/st_con3"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textContact4"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/textContact3"
        android:gravity="center"
        android:text="@string/st_con4"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textContact5"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_below="@id/textContact4"
        android:gravity="center"
        android:text="@string/st_con5"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/uback" />

</RelativeLayout>