<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/uZGreen"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_below="@id/imageButton3"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="-30dp"
        android:background="@android:color/transparent"
        android:padding="24dp"
        android:scaleType="centerInside"
        android:src="@drawable/ucyclelogocircular" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-16dp"
        android:layout_below="@id/imageButton"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/i_start"
        android:textColor="@android:color/background_light"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/textView"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/etherscan_ref"
        android:textColor="@android:color/background_light"
        android:textSize="10sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/dev_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/uGreenDark"
        android:textSize="12sp"
        android:visibility="invisible" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="90dp"
        android:layout_below="@id/imageButton"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/transparent"
        android:scaleType="fitStart"
        android:src="@drawable/scrappapp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_marginTop="4dp"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        android:src="@drawable/scrappadvert"
        android:visibility="invisible" />


</RelativeLayout>