<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_light"
    tools:context=".ItemActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:scaleType="centerCrop"
        android:src="@drawable/vss" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="32dp"
        android:src="@drawable/ucyclelogosign" />

    <ImageButton
        android:id="@+id/imagebuttontop2"
        android:layout_width="64dp"
        android:layout_height="64dp"

        android:layout_alignParentEnd="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"

        android:background="@android:color/transparent"
        android:scaleType="fitXY"
        android:src="@drawable/umenu8" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_below="@id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:padding="16dp"
        android:src="@drawable/ucyclelogosign" />

    <TextView
        android:id="@+id/txtTotalweight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-16dp"
        android:text=""
        android:textColor="@android:color/background_light"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtItemname"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="Itemname"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/txtItemdescription"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtItemname"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:gravity="center_horizontal"
        android:text="Item Description"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp" />



    <LinearLayout
        android:layout_centerHorizontal="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>

    <EditText
        android:id="@+id/edtItemquantity"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:layout_below="@id/txtItemdescription"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="2dp"
        android:inputType="number"
        android:maxLength="3"
        android:textColor="@color/uGreenDark"
        android:textSize="24dp"
        android:hint="@string/sp_qt" />

    <TextView
        android:id="@+id/textViewRes"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:gravity="center_horizontal"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="10dp"
        android:layout_below="@id/edtItemquantity" />

    <TextView
        android:id="@+id/txtItemquantity"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignBottom="@id/edtItemquantity"
        android:layout_centerHorizontal="true"
        android:layout_toLeftOf="@id/edtItemquantity"
        android:gravity="center_vertical"
        android:text="@string/st_iqt"
        android:textColor="@color/uGreenDark"
        android:textSize="18dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/copyright_name"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@android:color/background_light"
        android:textSize="12sp" />

</RelativeLayout>